--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,25 +1,63 @@
-name: LaTeX Output
+name: Build and push PDF
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Install LaTeX
-      run: |
-        sudo apt-get update && \
-        sudo apt-get install -y texlive-latex-base texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra texlive-latex-recommended texlive-lang-english
+      - name: Install TeX Live
+        run: sudo apt-get install texlive-full -y
 
-    - name: Compile LaTeX code
-      run: pdflatex -interaction=nonstopmode -halt-on-error main.tex
+      - name: Compile LaTeX code
+        run: |
+          pdflatex -interaction=nonstopmode main.tex
+          pdflatex -interaction=nonstopmode main.tex
 
-    - name: Upload output
-      uses: actions/upload-artifact@v2
-      with:
-        name: output
-        path: main.pdf
+      - name: Copy PDF to artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: main
+          path: main.pdf
+
+  push:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Download previous PDF
+        uses: actions/download-artifact@v2
+        with:
+          name: main
+          path: prev_main.pdf
+
+      - name: Compare PDF files
+        run: |
+          if ! cmp -s prev_main.pdf main.pdf; then
+            echo "PDF files are different"
+            echo "::set-env name=PDF_DIFF::true"
+          else
+            echo "PDF files are the same"
+            echo "::set-env name=PDF_DIFF::false"
+          fi
+
+      - name: Configure git
+        run: |
+          git config --global user.email "<YOUR-EMAIL>"
+          git config --global user.name "<YOUR-USERNAME>"
+
+      - name: Commit and push changes
+        if: env.PDF_DIFF == 'true'
+        uses: EndBug/add-and-commit@v7
+        with:
+          message: "Update PDF file"
+          add: main.pdf
+          branch: main
