--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,7 +45,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.email "techalla75@protonmail.com"
-          git config --global user.name "<RishikesavanRamesh>"
+          git config --global user.name "RishikesavanRamesh"
           git checkout main
           git add main.pdf
           git commit -m "Update PDF file"
